--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -16,4 +16,9 @@ jobs:
     - name: Build with Maven
       run: mvn -B package --file pom.xml
     - name: SonarCloud Scan
-      uses: SonarSource/sonarcloud-github-action@v1.1
+      run: mvn -B sonar:sonar -Dsonar.host.url=$HOST -Dsonar.organization=$ORG -Dsonar.projectKey=$KEY -Dsonar.login=$LOGIN
+      env:
+          LOGIN: ${{ secrets.sonar_project_key}}
+          HOST: "https://sonarcloud.io"
+          ORG: ${{secrets.sonar_organization}}
+          KEY: ${{secrets.sonar_login}}
