--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -16,7 +16,7 @@ jobs:
     - name: Build with Maven
       run: mvn -B install --file pom.xml
     - name: SonarCloud analyzes
-      run: mvn -B sonar:sonar -Dsonar.host.url=$HOST -Dsonar.organization=$ORG -Dsonar.projectKey=$KEY -Dsonar.login=$LOGIN
+      run: mvn -B sonar:sonar -Dsonar.phase=install -Dsonar.host.url=$HOST -Dsonar.organization=$ORG -Dsonar.projectKey=$KEY -Dsonar.login=$LOGIN
       env:
           LOGIN: ${{ secrets.sonar_login }}
           HOST: "https://sonarcloud.io"
