--- a/hal-forms/pom.xml
+++ b/hal-forms/pom.xml
@@ -20,6 +20,10 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     <java.version>1.8</java.version>
+    <!-- The main class to start by executing "java -jar" -->
+    <start-class>org.trenkmann.halforms.RestapiApplication</start-class>
+    <sonar.coverage.jacoco.xmlReportPaths>${basedir}/../${aggregate.report.dir}
+    </sonar.coverage.jacoco.xmlReportPaths>
   </properties>
 
   <dependencies>
