--- a/hal-hateoas/pom.xml
+++ b/hal-hateoas/pom.xml
@@ -20,6 +20,9 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     <java.version>1.8</java.version>
+    <start-class>org.trenkmann.restsample.RestapiApplication</start-class>
+    <sonar.coverage.jacoco.xmlReportPaths>${basedir}/../${aggregate.report.dir}
+    </sonar.coverage.jacoco.xmlReportPaths>
   </properties>
 
   <dependencies>
