additional test to hal-forms

--- a/hal-forms/src/main/resources/application.properties
+++ b/hal-forms/src/main/resources/application.properties
@@ -4,3 +4,8 @@
 #spring.jpa.properties.hibernate.format_sql=true
 #logging.level.org.hibernate.type=TRACE
 #logging.level.org.hibernate.sql=DEBUG
+info.apllication.name=@project.name@
+info.apllication.groupId=@project.groupId@
+info.apllication.artifactId=@project.artifactId@
+info.apllication.version=@project.version@
+info.apllication.description=@project.description@
