--- a/hal-hateoas/pom.xml
+++ b/hal-hateoas/pom.xml
@@ -64,6 +64,10 @@
       <groupId>org.projectlombok</groupId>
       <artifactId>lombok</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.springdoc</groupId>
+      <artifactId>springdoc-openapi-ui</artifactId>
+    </dependency>
   </dependencies>
 
   <build>
