--- a/hal-hateoas/src/main/resources/application.properties
+++ b/hal-hateoas/src/main/resources/application.properties
@@ -9,3 +9,10 @@ info.apllication.groupId=@project.groupId@
 info.apllication.artifactId=@project.artifactId@
 info.apllication.version=@project.version@
 info.apllication.description=@project.description@
+# swagger-ui custom config
+springdoc.swagger-ui.path=/oas/swagger-ui.html
+springdoc.swagger-ui.display-request-duration=true
+springdoc.swagger-ui.groups-order=desc
+# /api-docs endpoint custom path
+#springdoc.api-docs.path=/api-docs
+springdoc.api-docs.groups.enabled=true
