--- a/pom.xml
+++ b/pom.xml
@@ -33,7 +33,11 @@
 
   <dependencyManagement>
     <dependencies>
-
+      <dependency>
+        <groupId>org.springdoc</groupId>
+        <artifactId>springdoc-openapi-ui</artifactId>
+        <version>1.2.32</version>
+      </dependency>
     </dependencies>
   </dependencyManagement>
 
